Rename to SdfKit

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MarchingCubes\MarchingCubes.csproj" />
+    <ProjectReference Include="..\SdfKit\SdfKit.csproj" />
   </ItemGroup>
 
 </Project>
