--- a/SdfKit/SdfKit.csproj
+++ b/SdfKit/SdfKit.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>10.0</LangVersion>
+
+    <PackageId>SdfKit</PackageId>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
 </Project>
