--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         VERSION_SUFFIX: ${{github.run_number}}
       run: |
         VERSION=$VERSION_PREFIX.$VERSION_SUFFIX
-        sed -i bak "s:<Version>1.0.0</Version>:<Version>$VERSION</Version>:g" SdfKit/SdfKit.csproj
+        sed -i.bak "s:<Version>1.0.0</Version>:<Version>$VERSION</Version>:g" SdfKit/SdfKit.csproj
     
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
